MDL-77105 core: Render external icons as they are
* Activities with external icons will have an additional "external"
CSS class so they will be rendered as is the "filter" CSS property not
applied to them unlike the SVG icons from core activity modules.

--- a/theme/boost/scss/moodle/icons.scss
+++ b/theme/boost/scss/moodle/icons.scss
@@ -151,7 +151,9 @@ $iconsizes: map-merge((
         background-color: $value;
         .activityicon,
         .icon {
-            filter: brightness(0) invert(1);
+            &:not(.external) {
+                filter: brightness(0) invert(1);
+            }
         }
     }
 }
